cncProd/force-app/main/default/objects/Model_Master__c/Model_Master__c.object-meta.xml
<CustomObject>
    <label>Model Master</label>
    <nameField>
        <label>Model Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Master</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>