cncProd/force-app/main/default/objects/Model_Master__c/fields/BHP__c.field-meta.xml
<CustomField>
    <fullName>BHP__c</fullName>
    <label>BHP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>