cncProd/force-app/main/default/objects/Model_Master__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>