cncProd/force-app/main/default/objects/Model_Master__c/fields/Engine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Engine_Capacity__c</fullName>
    <label>Engine Capacity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>