cncProd/force-app/main/default/objects/Model_Master__c/fields/Fuel_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Capacity__c</fullName>
    <label>Fuel Capacity</label>
    <length>15</length>
    <type>Text</type>
</CustomField>