cncProd/force-app/main/default/objects/Model_Master__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>