cncProd/force-app/main/default/objects/Model_Master__c/fields/GM_Discount_Limit__c.field-meta.xml
<CustomField>
    <fullName>GM_Discount_Limit__c</fullName>
    <label>GM Discount Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>