cncProd/force-app/main/default/objects/Model_Master__c/fields/GST_Code__c.field-meta.xml
<CustomField>
    <fullName>GST_Code__c</fullName>
    <label>GST Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>