cncProd/force-app/main/default/objects/Model_Master__c/fields/Minimun_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimun_Deposit_Amount__c</fullName>
    <label>Minimun Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>