cncProd/force-app/main/default/objects/Model_Master__c/fields/Model_Description__c.field-meta.xml
<CustomField>
    <fullName>Model_Description__c</fullName>
    <label>Model Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>