cncProd/force-app/main/default/objects/Model_Master__c/fields/Model_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Model_Short_Description__c</fullName>
    <label>Model Short Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>