cncProd/force-app/main/default/objects/Model_Master__c/fields/NEA_Cor_No__c.field-meta.xml
<CustomField>
    <fullName>NEA_Cor_No__c</fullName>
    <label>NEA Cor No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>