cncProd/force-app/main/default/objects/Model_Master__c/fields/No_Of_Doors__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Doors__c</fullName>
    <label>No. Of Doors.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>