cncProd/force-app/main/default/objects/Model_Master__c/fields/No_Of_Gears__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Gears__c</fullName>
    <label>No. Of Gears</label>
    <length>10</length>
    <type>Text</type>
</CustomField>