cncProd/force-app/main/default/objects/Model_Master__c/fields/Sales_Manager_Discount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Discount_Limit__c</fullName>
    <label>Sales Manager Discount Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>