cncProd/force-app/main/default/objects/Model_Master__c/fields/Warranty_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Mileage__c</fullName>
    <label>Warranty Mileage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>